[package]
name = "pushenv"
version = "1.1.2"
edition = "2021"
description = """
A CLI utility that reads a .env file before starting a process.

Example usage:
  pushenv -- echo $SOME_VAR
  pushenv some.env.file -- echo $SOME_VAR
"""
repository = "https://github.com/JensGM/pushenv"
license = "GPL-3.0"

[[bin]]
name = "pushenv"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.59"

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3.10.1"
predicates = "3.1.0"
rstest = "0.19.0"
